<resources>
    <string name="app_name">Album</string>
    <string name="text_delete">delete</string>
    <string name="text_crop">crop</string>
    <string name="text_filter">filter</string>
    <string name="text_rotate">rotate</string>

    <string name="nav_month">Home</string>
    <string name="nav_memory">Memory</string>
    <string name="nav_map">Location</string>
    <string name="nav_folder">Folder</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="toast_unexpected_error">Unexpected error occur</string>

    <string name="format_crop_result_d_d">Crop Result (%1$dx%2$d)</string>
    <string name="notification_image_saved">Image saved</string>
    <string name="menu_download">Download</string>
    <string name="toast_cannot_retrieve_cropped_image">Cannot retrieve cropped image</string>

    <string name="permission_title_rationale">Permission needed</string>
    <string name="permission_read_storage_rationale">Storage read permission is needed to pick files.</string>
    <string name="permission_write_storage_rationale">Storage write permission is needed to save the image.</string>

    <string name="toast_cannot_retrieve_selected_image">Cannot retrieve selected image</string>


    <string name="file_provider_authorities">com.example.akiyoshi.provider</string>
    <string name="channel_name">ucrop_chanel</string>
    <string name="channel_description">ucrop result image</string>

    <string name="notification_image_saved_click_to_preview">Image saved. Click to preview.</string>
</resources>
