<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_delete"
        android:enabled="true"
        android:icon="@drawable/ic_delete_black_24dp"
        android:title="@string/text_delete"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_rotate_right"
        android:enabled="true"
        android:icon="@drawable/ic_rotate_right_black_24dp"
        android:title="@string/text_rotate"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_crop"
        android:enabled="true"
        android:icon="@drawable/ic_crop_black_24dp"
        android:title="@string/text_crop"
        app:showAsAction="ifRoom" />
</menu>
